crates/tensor-capi/include/edgefirst/tensor.h


typedef struct ef_tensor ef_tensor;
typedef struct ef_tensor_builder ef_tensor_builder;
typedef struct ef_tensor_image_desc ef_tensor_image_desc;
typedef struct ef_image_desc_view {
  uint64_t width;
  uint64_t height;
  uint32_t format;
  uint32_t dtype;
  uint32_t access;
  uint32_t memory;
  uint32_t has_memory;
  uint32_t compression;
  uint32_t has_compression;
} ef_image_desc_view;
typedef struct ef_tensor_plane {
  int64_t handle;
  uint64_t offset;
  uint64_t stride;
  uint64_t size;
  uint64_t used;
  uint64_t modifier;
} ef_tensor_plane;
typedef struct EfViewOrigin {
  uint64_t parent_width;
  uint64_t parent_height;
  uint64_t parent_row_stride;
  uint64_t x;
  uint64_t y;
  uint32_t has_origin;
} EfViewOrigin;
typedef void (*EfLogCallback)(ef_log_level level,
                              const char *target,
                              const char *message,
                              void *userdata);
typedef struct ef_tensor_view {
  uint8_t *ptr;
  uintptr_t len;
} ef_tensor_view;
typedef struct ef_quantization_info {
  int32_t axis;
  uint32_t count;
  uint32_t has_quantization;
} ef_quantization_info;
uint32_t ef_tensor_abi_version(void);
ef_tensor_builder *ef_tensor_builder_new(void);
void ef_tensor_builder_free(ef_tensor_builder *b);
int ef_tensor_builder_error(const ef_tensor_builder *b);
int ef_tensor_builder_dtype(ef_tensor_builder *b, uint32_t dtype);
int ef_tensor_builder_shape(ef_tensor_builder *b, const uint64_t *dims, uint32_t ndim);
int ef_tensor_builder_strides(ef_tensor_builder *b, const int64_t *str, uint32_t ndim);
int ef_tensor_builder_storage(ef_tensor_builder *b, uint32_t kind);
int ef_tensor_builder_add_plane(ef_tensor_builder *b,
                                int64_t handle,
                                uint64_t offset,
                                uint64_t stride,
                                uint64_t size,
                                uint64_t used,
                                uint64_t modifier);
int ef_tensor_builder_format(ef_tensor_builder *b, const char *f);
int ef_tensor_builder_colorimetry(ef_tensor_builder *b,
                                  const char *space,
                                  const char *transfer,
                                  const char *encoding,
                                  const char *range);
int ef_tensor_builder_quantization(ef_tensor_builder *b,
                                   int32_t axis,
                                   const float *scales,
                                   const int32_t *zps,
                                   uint32_t n);
int ef_tensor_builder_fence(ef_tensor_builder *b, int fd);
ef_tensor *ef_tensor_builder_alloc(ef_tensor_builder *b);
ef_tensor *ef_tensor_builder_wrap(ef_tensor_builder *b);
void *ef_tensor_cuda_map(const ef_tensor *t);
void *ef_tensor_cuda_device_ptr(const void *map, uintptr_t *out_size);
void ef_tensor_cuda_unmap(void *map);
struct ef_tensor_image_desc *ef_tensor_image_desc_new(uintptr_t width,
                                                      uintptr_t height,
                                                      const char *format,
                                                      uint32_t dtype);
void ef_tensor_image_desc_free(struct ef_tensor_image_desc *d);
int ef_tensor_image_desc_set_memory(struct ef_tensor_image_desc *d, uint32_t kind);
int ef_tensor_image_desc_set_access(struct ef_tensor_image_desc *d, uint32_t access);
int ef_tensor_image_desc_set_compression(struct ef_tensor_image_desc *d, uint32_t compression);
int ef_tensor_image_desc_get(const struct ef_tensor_image_desc *d, struct ef_image_desc_view *out);
ef_tensor *ef_tensor_image_desc_alloc(const struct ef_tensor_image_desc *d);
uint32_t ef_tensor_ndim(const ef_tensor *t);
const uint64_t *ef_tensor_shape(const ef_tensor *t);
const int64_t *ef_tensor_strides(const ef_tensor *t);
uint32_t ef_tensor_dtype(const ef_tensor *t);
uint32_t ef_tensor_storage_kind(const ef_tensor *t);
uint32_t ef_tensor_plane_count(const ef_tensor *t);
const char *ef_tensor_format(const ef_tensor *t);
uint32_t ef_tensor_colorimetry(const ef_tensor *t);
int ef_tensor_plane_at(const ef_tensor *t, uint32_t index, struct ef_tensor_plane *out);
int64_t ef_tensor_capacity_bytes(const ef_tensor *t);
int64_t ef_tensor_row_stride(const ef_tensor *t);
uint32_t ef_tensor_compression(const ef_tensor *t);
int ef_tensor_view_origin(const ef_tensor *t, struct EfViewOrigin *out);
ef_tensor *ef_tensor_new(uint32_t dtype, const uint64_t *dims, uint32_t ndim);
char *ef_tensor_name(const ef_tensor *t);
ef_tensor *ef_tensor_wrap_host(uint8_t *ptr,
                               uintptr_t capacity,
                               uint32_t dtype,
                               const uint64_t *dims,
                               uint32_t ndim);
ef_tensor *ef_tensor_from_iosurface_id(uint32_t id,
                                       uint32_t dtype,
                                       const uint64_t *dims,
                                       uint32_t ndim);
void ef_tensor_free(ef_tensor *t);
int ef_tensor_retain(ef_tensor *t);
int ef_tensor_set_colorimetry(ef_tensor *t, uint32_t packed);
ef_tensor *ef_tensor_from_hardware_buffer(uint32_t dtype,
                                          void *buffer,
                                          const uint64_t *dims,
                                          uint32_t ndim,
                                          const char *name);
void *ef_tensor_hardware_buffer_ptr(const ef_tensor *t);
int ef_tensor_hardware_buffer_physical_dims(const ef_tensor *t,
                                            uintptr_t *width,
                                            uintptr_t *height);
void *ef_tensor_iosurface_ref(const ef_tensor *t);
ef_tensor *ef_tensor_image_alloc(uintptr_t width,
                                 uintptr_t height,
                                 const char *format,
                                 uint32_t dtype,
                                 int has_memory,
                                 uint32_t memory,
                                 uint32_t access);
ef_tensor *ef_tensor_image_with_stride_alloc(uintptr_t width,
                                             uintptr_t height,
                                             const char *format,
                                             uint32_t dtype,
                                             uintptr_t row_stride_bytes,
                                             int has_memory,
                                             uint32_t memory,
                                             uint32_t access);
ef_tensor *ef_tensor_view_region(const ef_tensor *t,
                                 uint64_t x,
                                 uint64_t y,
                                 uint64_t width,
                                 uint64_t height);
ef_tensor *ef_tensor_batch(const ef_tensor *t, uint64_t n);
ef_tensor *ef_tensor_from_planes(ef_tensor *luma, ef_tensor *chroma, const char *format);
const char *ef_tensor_last_error_message(void);
uint32_t ef_tensor_last_error_class(void);
int ef_log_init_file(FILE *stream, uint32_t max_level);
int ef_log_init_callback(EfLogCallback cb, void *userdata, uint32_t max_level);
int ef_tensor_map(ef_tensor *t, uint32_t access, struct ef_tensor_view *out);
int ef_tensor_unmap(ef_tensor *t);
int ef_tensor_sync_for_cpu(const ef_tensor *t, uint32_t access);
int ef_tensor_sync_for_device(const ef_tensor *t, uint32_t access);
int64_t ef_tensor_copy_to(ef_tensor *t, uint8_t *out, uintptr_t cap);
int ef_tensor_set_format(ef_tensor *t, const char *format);
int ef_tensor_set_row_stride(ef_tensor *t, uintptr_t stride);
int ef_tensor_set_row_stride_unchecked(ef_tensor *t, uintptr_t stride);
int ef_tensor_set_plane_offset(ef_tensor *t, uintptr_t offset);
int64_t ef_tensor_plane_offset(const ef_tensor *t);
int ef_tensor_reshape(ef_tensor *t, const uint64_t *dims, uint32_t ndim);
int ef_tensor_set_logical_shape(ef_tensor *t, const uint64_t *dims, uint32_t ndim);
int ef_tensor_clone_fd(const ef_tensor *t);
int ef_tensor_set_dtype(ef_tensor *t, uint32_t dtype);
int ef_tensor_configure_image(ef_tensor *t, uintptr_t width, uintptr_t height, const char *format);
int ef_is_cuda_available(void);
int ef_is_dma_available(void);
int ef_is_gpu_buffer_available(void);
int ef_is_iosurface_available(void);
int ef_is_shm_available(void);
int ef_platform_compression_support(const char *format, uint32_t dtype);
uint64_t ef_compression_fallback_count(void);
uint64_t ef_unplanned_cpu_access_count(void);
int ef_tensor_quantization_info(const ef_tensor *t, struct ef_quantization_info *out);
int ef_tensor_quantization_get(const ef_tensor *t, float *scales, int32_t *zps, uint32_t n);
int ef_tensor_quantization_set(ef_tensor *t,
                               int32_t axis,
                               const float *scales,
                               const int32_t *zps,
                               uint32_t n);
int ef_tensor_quantization_clear(ef_tensor *t);
int ef_tensor_export(const ef_tensor *t,
                     uint8_t *blob_out,
                     uintptr_t blob_cap,
                     uintptr_t *blob_len,
                     int *fds_out,
                     uintptr_t fds_cap,
                     uintptr_t *fds_len);
ef_tensor *ef_tensor_import(const uint8_t *blob_in,
                            uintptr_t blob_len,
                            const int *fds_in,
                            uintptr_t fds_len);
int ef_start_tracing(const char *path);
void ef_stop_tracing(void);
int ef_is_tracing_active(void);